[metadata]
license_files = LICENSE.txt

[mypy]
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
no_implicit_optional = True
disallow_incomplete_defs = True
warn_redundant_casts = True
warn_unused_ignores = True
exclude =
    (?x)(
    venv
    |^doc/conf.py$
    |^test
    |^setup.py$
    |^src/can/interfaces/__init__.py
    |^src/can/interfaces/etas
    |^src/can/interfaces/gs_usb
    |^src/can/interfaces/ics_neovi
    |^src/can/interfaces/iscan
    |^src/can/interfaces/ixxat
    |^src/can/interfaces/kvaser
    |^src/can/interfaces/nican
    |^src/can/interfaces/neousys
    |^src/can/interfaces/pcan
    |^src/can/interfaces/serial
    |^src/can/interfaces/slcan
    |^src/can/interfaces/socketcan
    |^src/can/interfaces/systec
    |^src/can/interfaces/udp_multicast
    |^src/can/interfaces/usb2can
    |^src/can/interfaces/virtual
    )
